# medseg

./: .gitignore  IMPLEMENTATION_PLAN.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0857cb6ea4aa_add_sample_set_subset_image_tables.py  2c85b1f22a97_add_task_table.py  5f79415f04f7_add_user_table.py  dbd4610d6537_add_subset_name_unique_constraint_and_.py  e87b65b2013f_add_folder_and_share_tables.py
app/: main.py
app/api/: dependencies.py  main.py
app/api/routes/: admin.py  auth.py  images.py  library.py  pipelines.py  sample_sets.py  subsets.py  tasks.py  ws.py  (+1 more)
app/core/: config.py  error_handler.py  exceptions.py  security.py  static.py
app/db/: __init__.py
app/locales/: en.json  zh.json
app/models/: __init__.py  folder.py  image.py  sample_set.py  share.py  subset.py  task.py  user.py
app/pipeline/: __init__.py  interface.py  registry.py  resource_manager.py  scheduler.py  state.py
app/schemas/: __init__.py  auth.py  library.py  pipeline.py  sample.py  task.py  user.py
app/services/: auth.py  i18n.py  image.py  library.py  pipeline.py  sample_set.py  subset.py  task.py  user.py
app/utils/: logger.py
app/ws/: __init__.py
docs/: PRD.md  api-guide.md  architecture.md  frontend-architecture.md  module-dev-guide.md
front/: openapi-ts.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
front/app/: root.tsx  routes.ts
tests/: conftest.py  test_admin.py  test_auth.py  test_brats_normalizer.py  test_health.py  test_imfuse_segmenter.py  test_library.py  test_pipeline.py  test_samples.py  test_tasks.py  test_ws.py
(+58 files in other folders)
